--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,16 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Copy link text",
-  "version": "0.1.1",
-  "description": "Lets you copy the link text when you double click on a link",
+  "version": "1.0.0",
+  "description": "Lets you copy the link text when you double tap on a link",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{27b22fd7-a0ef-4a49-9221-931c04ea5332}",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
+    }
+  },
   "icons": {
     "48": "icons/icon-48.png",
     "96": "icons/icon-96.png"
